🚀 1단계 - 스트림, 람다, Optional (#2051)
* Feature: @FunctionalInterface 애노테이션 추가

* Test: MoveStrategy 람다 적용

* Fix: 람다를 활용하여 sumAll 메서드 중복 제거

* Refactor: 람다를 활용하여 sumAllEven 메서드 중복 제거

* Refactor: 람다를 활용하여 sumAllOverThree  메서드 중복 제거

* Refactor: Predicate<Integer> 를 파라미터로 넘겨주어 sum 메서드 단일화

* Fix: 파일 경로 문자열 new String -> Files.readString 으로 생성하도록 수정

* Refactor: 파일 문자 중 길이가 12보다 큰 문자의 수 구하기 람다로 수정

* Refactor: sumOverThreeAndDouble 메서드 람다 표현식으로 수정

* Test: sumOverThreeAndDouble 엣지 테스트 케이스 추가 (Integer.MAX_VALUE 연산)

* Refactor: printLongestWordTop100 메서드 람다 표현식으로 수정

* Refactor: printLongestWordTop100 메서드 출력을 위한 words -> string 포맷 메서드 분리

* Fix: 단어 출력 toLowerCase() 요구사항 조건 누락 수정

* Refactor: ageIsInRange2() 메서드 람다 표현식 활용해서 구현

* Refactor: getUser() 람다 표현식으로 수정

* Refactor: Expression.of() 메서드에서 일치하는 연산자 없는 경우 예외처리 orElseThrow 람다 표현식 활용

* Revert "Test: MoveStrategy 람다 적용"

This reverts commit 23412a0db458bdc97772a59a02be6744150039ee.

* Revert "Fix: 람다를 활용하여 sumAll 메서드 중복 제거"

* Fix: sum() 조건을 구하는 Conditional 함수형 인터페이스 추가, sumAll() 메서드 람다를 활용하여 수정

* Revert "Refactor: 람다를 활용하여 sumAllEven 메서드 중복 제거"

* Revert "Refactor: Predicate<Integer> 를 파라미터로 넘겨주어 sum 메서드 단일화"

* Fix: sum 메서드 람다 표현식을 활용하여 수정

* Refactor: 기본 sum 메서드 파라미터로 각 sum 메서드에서 Conditional 전달하도록 수정

* Refactor: 문자열 길이 비교 시 Comparator.comparingInt 사용해서 비교하도록 수정

* Refactor: User age 만 매핑해서 필터링하도록 수정

* Refactor: 동작 확인을 위한 index 출력 제거, forEach 로 반복 출력하도록 수정